# leavitt

./: cabal.project  leavitt.cabal
src/: CornerIso.hs  FranksNormalForm.hs  Graph.hs  History.hs  Iso.hs  Leavitt.hs  Reduction.hs  Render.hs  Trace.hs
test/: Main.hs
